src/test/resources/repos/invalid-binary-desc-subjects/141/964/af8/141964af842132b7a706ed010474c410514b472acc0d7d8f805c23e748578b8b/v1/inventory.json.sha512
f6563ce72e0a37f8ba2ba06e4334463cc30c9c57fd9b1d01026abec111b3ae557a8d7942020951ecd5c3fa3d650a0a56bafa98dd5ab4a6d36f9562a488f2812f	inventory.json